Btn text modified

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     </div>
     <div class="filter-box">
         <input id="filter-text" type="text" name="buscador">
-        <button id="filter-submit">Filter</button>
+        <button id="filter-submit">Buscar</button>
     </div>
     <main class="main"></main>
     
